<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">conference_detail1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt1">High Level Conference</string>
     <string name="txt2">VMCC - IIT Bombay, Date:25 Feb 2014 To 26 Feb 2014</string>
	<string name="txt3"> Date:25/02/2014 To 26/02/2014</string>
	<string name="txt4">Event Manager:09967349903</string>
	<string name="txt5">Conference Speaker </string>
	<string name="txt6">Shri.Pallam Raju</string>
	<string name="txt7">Mr.Mark Russell</string>
	<string name="txt8">Dr. Anoop Gupta</string>
</resources>
