<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_below="@+id/textView4"
        android:text="Microsoft Research"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/imageView4"
        android:text="@string/txt8"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView6"
        android:layout_weight="1"
        android:text="British Council"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/imageView5"
        android:text="@string/txt7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_weight="1"
        android:src="@drawable/mhrd_logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:src="@drawable/nmeict" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/txt1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0B4C5F" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:src="@drawable/pallam" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:src="@drawable/anoop_gupta" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_weight="1"
        android:src="@drawable/anoop_gupta" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/txt5"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00BFFF" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/txt2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B4C5F" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignParentBottom="true"
        android:text="@string/txt4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B4C5F" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Schedule" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_below="@+id/textView5"
        android:layout_weight="1"
        android:text="HRD Minister"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_weight="1"
        android:text="@string/txt6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0B0719" />

</RelativeLayout>